# dev-trader

./: .gitignore  pyproject.toml
.envs/: .env.example
dev_trader/: clients.py  env.py
